[tool.poetry]
name = "pytorch-tutorial"
version = "0.1.0"
description = ""
authors = ["Vinícius José Pierri Nogueira <vinijosenog@hotmail.com>"]
readme = "README.md"
packages = [{include = "pytorch_tutorial"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0.1"
torchvision = "^0.15.2"
matplotlib = "^3.8.0"
ipykernel = "^6.25.2"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
